hphp/test/zend/good/ext/mysqli/tests/mysqli_fetch_field_flags.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifemb.inc');
require_once('skipifconnectfailure.inc');

require_once('connect.inc');
if (!$link = my_mysqli_connect($host, $user, $passwd, $db, $port, $socket))
		die(printf("skip: [%d] %s\n", mysqli_connect_errno(), mysqli_connect_error()));

if (mysqli_get_server_version($link) < 50041)
	die("skip: Due to many MySQL Server differences, the test requires 5.0.41+");

mysqli_close($link);
?>